--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,1 +1,22 @@
 
+name: Docker Image Build
+
+on:
+  workflow_dispatch: # Trigger the workflow manually
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Pull image from Docker Hub
+      run: docker pull your-dockerhub-username/your-image:your-tag
+
+    - name: Build Docker image
+      run: docker build -t your-dockerhub-username/your-image:your-tag .
