--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,4 +1,3 @@
-
 name: Docker Image Build
 
 on:
@@ -20,3 +19,9 @@ jobs:
 
     - name: Build Docker image
       run: docker build -t your-dockerhub-username/your-image:your-tag .
+    - name: Send success notification to Slack
+      if: success()
+      run: |
+          curl -X POST -H 'Content-type: application/json' \
+          --data '{"text":"Hey team, the build has succeeded! :sparkles: \nTriggered by: `'"${GITHUB_ACTOR}"'`"}' \
+          ${{ secrets.SLACK_WEBHOOK_URL }}
